# model/common.go
@@ -1,10 +1,0 @@
-package model
-
-import "time"
-
-type Model struct {
-	ID        uint       `json:"id" gorm:"primary_key"`
-	CreatedAt time.Time  `json:"created_at"`
-	UpdatedAt time.Time  `json:"updated_at"`
-	DeletedAt *time.Time `json:"-" sql:"index"`
-}
